packages/datagrep/datagrep-3.0.1a6.tar.gz/datagrep-3.0.1a6/datagrep/{{cookiecutter.project_slug}}/services/caddy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ${DOMAIN_NAME}
      http:
        paths:
          - path: "/.well-known/acme-challenge"
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 443
